Replace template CLI tests with command exercisings; clear TODO
No effects were observed on Make-managed files.

Signed-off-by: Alex Nelson <alexander.nelson@nist.gov>

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,15 +28,14 @@ python_requires = >=3.9
 
 [options.entry_points]
 console_scripts =
-    #TODO
-    case_dfxml = case_dfxml.cli:main
+    case_to_dfxml = case_dfxml.case_to_dfxml:main
+    dfxml_to_case = case_dfxml.dfxml_to_case:main
 
 [options.extras_require]
 testing =
     case_utils[testing]
 
 [options.package_data]
-#TODO
 case_dfxml = py.typed
 
 [flake8]
