--- a/tests/cli/Makefile
+++ b/tests/cli/Makefile
@@ -18,13 +18,32 @@ SHELL := /bin/bash
 
 top_srcdir := $(shell cd ../.. ; pwd)
 
+dfxml_top_srcdir := $(top_srcdir)/deps/dfxml
+
+dfxml_xsd := $(dfxml_top_srcdir)/dependencies/dfxml_schema/dfxml.xsd
+
+objects_py_dependencies := \
+  $(dfxml_top_srcdir)/dfxml/__init__.py \
+  $(dfxml_top_srcdir)/dfxml/objects.py
+
+case_to_dfxml_dependencies := \
+  $(objects_py_dependencies) \
+  $(top_srcdir)/case_dfxml/case_to_dfxml.py
+
+dfxml_to_case_dependencies := \
+  $(objects_py_dependencies) \
+  $(top_srcdir)/case_dfxml/dfxml_to_case.py
+
+make_differential_dfxml_dependencies := \
+  $(dfxml_top_srcdir)/dfxml/bin/make_differential_dfxml.py \
+  $(objects_py_dependencies)
+
 all: \
-  example_output.jsonld \
-  example_output.rdf \
-  example_output.ttl \
-  example_output_debug.jsonld \
-  example_output_debug.rdf \
-  example_output_debug.ttl
+  empty.json \
+  single_file_1.rdf \
+  single_file_0_2_deltas.dfxml \
+  single_file_0_json_2_deltas.dfxml \
+  single_filesystem_single_file_0_2_deltas.dfxml
 
 .PHONY: \
   check-pytest
@@ -40,32 +59,222 @@ check-pytest: \
 
 clean:
 	@rm -rf \
-	  *.jsonld \
-	  *.rdf \
-	  *.ttl \
 	  .pytest_cache
+	@rm -f \
+	  *.json \
+	  *.rdf \
+	  *.ttl
 
-example_output.%: \
-  $(top_srcdir)/case_dfxml/cli.py \
-  $(top_srcdir)/tests/.venv.done.log
-	export CDO_DEMO_NONRANDOM_UUID_BASE="$(top_srcdir)" \
+empty.json: \
+  $(top_srcdir)/tests/.venv.done.log \
+  empty_json.py
+	rm -f _$@
+	source $(top_srcdir)/tests/venv/bin/activate \
+	  && python empty_json.py \
+	    _$@
+	source $(top_srcdir)/tests/venv/bin/activate \
+	  && case_validate \
+	    _$@
+	mv _$@ $@
+
+single_file_0.dfxml: \
+  $(dfxml_xsd) \
+  $(objects_py_dependencies) \
+  empty.json \
+  single_file_0_dfxml.py
+	rm -f __$@ _$@
+	source $(top_srcdir)/tests/venv/bin/activate \
+	  && python single_file_0_dfxml.py \
+	    __$@
+	xmllint \
+	  --format \
+	  --schema $(dfxml_xsd) \
+	  __$@ \
+	  > _$@
+	rm __$@
+	mv _$@ $@
+
+single_file_0_2_deltas.dfxml: \
+  $(make_differential_dfxml_dependencies) \
+  single_file_2.dfxml
+	rm -f __$@ _$@
+	source $(top_srcdir)/tests/venv/bin/activate \
+	  && make_differential_dfxml \
+	    --retain-unchanged \
+	    single_file_{0,2}.dfxml \
+	    > __$@
+	xmllint \
+	  --format \
+	  --schema $(dfxml_xsd) \
+	  __$@ \
+	  > _$@
+	rm __$@
+	mv _$@ $@
+
+single_file_0_json_2_deltas.dfxml: \
+  $(make_differential_dfxml_dependencies) \
+  single_file_2.json.dfxml
+	rm -f __$@ _$@
+	source $(top_srcdir)/tests/venv/bin/activate \
+	  && make_differential_dfxml \
+	    --retain-unchanged \
+	    single_file_0.dfxml \
+	    single_file_2.json.dfxml \
+	    > __$@
+	xmllint \
+	  --format \
+	  --schema $(dfxml_xsd) \
+	  __$@ \
+	  > _$@
+	rm __$@
+	mv _$@ $@
+
+single_file_1.json: \
+  $(dfxml_to_case_dependencies) \
+  single_file_0.dfxml
+	rm -f _$@
+	export CDO_DEMO_NONRANDOM_UUID_BASE=$(top_srcdir) \
 	  && source $(top_srcdir)/tests/venv/bin/activate \
-	    && case_dfxml \
+	    && dfxml_to_case \
+	      --debug \
+	      --output-format=json-ld \
+	      single_file_0.dfxml \
 	      _$@
 	source $(top_srcdir)/tests/venv/bin/activate \
 	  && case_validate \
 	    _$@
 	mv _$@ $@
 
-example_output_debug.%: \
-  $(top_srcdir)/case_dfxml/cli.py \
-  $(top_srcdir)/tests/.venv.done.log
-	export CDO_DEMO_NONRANDOM_UUID_BASE="$(top_srcdir)" \
+single_file_1.rdf: \
+  $(dfxml_to_case_dependencies) \
+  single_file_0.dfxml
+	rm -f _$@
+	export CDO_DEMO_NONRANDOM_UUID_BASE=$(top_srcdir) \
 	  && source $(top_srcdir)/tests/venv/bin/activate \
-	    && case_dfxml \
+	    && dfxml_to_case \
 	      --debug \
+	      --output-format=xml \
+	      single_file_0.dfxml \
 	      _$@
 	source $(top_srcdir)/tests/venv/bin/activate \
 	  && case_validate \
 	    _$@
+	mv _$@ $@
+
+single_file_1.ttl: \
+  $(dfxml_to_case_dependencies) \
+  single_file_0.dfxml
+	rm -f _$@
+	export CDO_DEMO_NONRANDOM_UUID_BASE=$(top_srcdir) \
+	  && source $(top_srcdir)/tests/venv/bin/activate \
+	    && dfxml_to_case \
+	      --debug  \
+	      --output-format=ttl \
+	      single_file_0.dfxml \
+	      _$@
+	source $(top_srcdir)/tests/venv/bin/activate \
+	  && case_validate \
+	    _$@
+	mv _$@ $@
+
+single_file_2.dfxml: \
+  $(case_to_dfxml_dependencies) \
+  single_file_1.ttl
+	rm -f __$@ _$@
+	source $(top_srcdir)/tests/venv/bin/activate \
+	  && case_to_dfxml \
+	    --debug \
+	    single_file_1.ttl \
+	    __$@
+	xmllint \
+	  --format \
+	  --schema $(dfxml_xsd) \
+	  __$@ \
+	  > _$@
+	rm __$@
+	mv _$@ $@
+
+single_file_2.json.dfxml: \
+  $(case_to_dfxml_dependencies) \
+  single_file_1.json
+	rm -f __$@ _$@
+	source $(top_srcdir)/tests/venv/bin/activate \
+	  && case_to_dfxml \
+	    --debug \
+	    single_file_1.json \
+	    __$@
+	xmllint \
+	  --format \
+	  --schema $(dfxml_xsd) \
+	  __$@ \
+	  > _$@
+	rm __$@
+	mv _$@ $@
+
+single_filesystem_single_file_0.dfxml: \
+  $(dfxml_xsd) \
+  $(objects_py_dependencies) \
+  empty.json \
+  single_filesystem_single_file_0_dfxml.py
+	rm -f __$@ _$@
+	source $(top_srcdir)/tests/venv/bin/activate \
+	  && python single_filesystem_single_file_0_dfxml.py \
+	    __$@
+	xmllint \
+	  --format \
+	  --schema $(dfxml_xsd) \
+	  __$@ \
+	  > _$@
+	rm __$@
+	mv _$@ $@
+
+single_filesystem_single_file_0_2_deltas.dfxml: \
+  $(make_differential_dfxml_dependencies) \
+  single_filesystem_single_file_2.dfxml
+	rm -f __$@ _$@
+	source $(top_srcdir)/tests/venv/bin/activate \
+	  && make_differential_dfxml \
+	    --debug \
+	    --retain-unchanged \
+	    single_filesystem_single_file_{0,2}.dfxml \
+	    > __$@
+	xmllint \
+	  --format \
+	  --schema $(dfxml_xsd) \
+	  __$@ \
+	  > _$@
+	rm __$@
+	mv _$@ $@
+
+single_filesystem_single_file_1.ttl: \
+  $(dfxml_to_case_dependencies) \
+  single_filesystem_single_file_0.dfxml
+	rm -f _$@
+	export CDO_DEMO_NONRANDOM_UUID_BASE=$(top_srcdir) \
+	  && source $(top_srcdir)/tests/venv/bin/activate \
+	    && dfxml_to_case \
+	      --debug \
+	      --output-format=ttl \
+	      single_filesystem_single_file_0.dfxml \
+	      _$@
+	source $(top_srcdir)/tests/venv/bin/activate \
+	  && case_validate \
+	    _$@
+	mv _$@ $@
+
+single_filesystem_single_file_2.dfxml: \
+  $(case_to_dfxml_dependencies) \
+  single_filesystem_single_file_1.ttl
+	rm -f __$@ _$@
+	source $(top_srcdir)/tests/venv/bin/activate \
+	  && case_to_dfxml \
+	    --debug \
+	    single_filesystem_single_file_1.ttl \
+	    __$@
+	xmllint \
+	  --format \
+	  --schema $(dfxml_xsd) \
+	  __$@ \
+	  > _$@
+	rm __$@
 	mv _$@ $@
