Update dependency mechanism
Signed-off-by: Alex Nelson <alexander.nelson@nist.gov>

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,9 +20,11 @@ classifiers =
     Programming Language :: Python :: 3
     Topic :: Software Development :: Testing
 
+# See Git submodule in this project for current tested version of DFXML repository.
 [options]
 install_requires =
     case_utils >= 0.16.0, < 0.17.0
+    dfxml @ git+https://git@github.com/dfxml-working-group/dfxml_python.git
 packages = find:
 python_requires = >=3.9
 
